further modification to addevent
Signed-off-by: mosh-exe <mohammeds@mun.ca>