@@ -41,8 +41,8 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-
                     <options>
+                        <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
                         <option>--add-opens</option>
